# lambda_term

./: .gitignore  README.md  TUTORIAL.md  beta.py  config.py  configuration.py  desugar.py  directive.py  evaluate.py  lambdaterm.py  letrec_prelude  load.py  parse.py  prelude  prelude_lite  program_env.py  pyproject.toml  status.py  tokenize_lambda.py
example_src/: prelude_plus_mz.lbd
lambda/: prelude_plus_mz.lbd
lbd/: beta.py  desugar.py  directive.py  error.py  evaluate.py  free_vars.py  gamma.py  parse.py  prettify.py  repl.py  term.py  token_defs.py  tokenize.py  tokenize_lambda.py
python/: beta.py  directive.py  error.py  evaluate.py  main.py  parse.py  prelude.lbd  program_env.py  repl.py  term.py  test_beta.py  test_global_env.py  test_main.py  test_parse.py  test_tokenize_lambda.py  tokenize_lambda.py
python/tests/: make_zero.lbd  test_directive.py  test_recursive.py  test_tokenize_lambda.py
src/lbd/: beta.py  evaluate.py  lambdaterm.py  parse.py  prelude_lite  repl.py
tests/: aux.py  prelude_plus_mz.lbd  test_beta.py  test_directive.py  test_global_env.py  test_parse.py  test_recursive.py  test_tokenize_lambda.py
tests/core/: aux.py  test_beta.py  test_let.py  test_parse.py  test_prettify.py  test_tokenize.py
tests/gamma/: aux.py  test_arithmetic.py  test_assignment.py  test_bind.py  test_default_value.py  test_prettify.py  test_prettify_free.py  test_semicolon.py  test_sym.py  test_sym_clear.py
tests/no_genv/: test_beta.py  test_parse.py  test_prettify.py  test_tokenize.py  test_tokenize_lambda.py
